<resources>
    <string name="app_name">Fresher Bai3</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="set_color">set color</string>
    <string name="cancel">cancel</string>
    <string name="hien_thi_mau">Hiển Thị Màu</string>
    <string name="color_1">Color 1</string>
    <string name="color_2">Color 2</string>
    <string name="color_3">Color 3</string>
    <string name="button_5">Button 5</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
</resources>
