<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="#9E9E9E"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/rg_group"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textColor="@color/colorBlack" />
            <RadioButton
                android:textColor="@color/colorBlack"
                android:id="@+id/rb_white"
                android:text="@string/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:textColor="@color/colorBlack"
                android:id="@+id/rb_blue"
                android:text="@string/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_set_color"
                android:text="@string/set_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:id="@+id/tv_show_color"
        android:text="@string/hien_thi_mau"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>